# rt-jam

./: Makefile  README.md  Trunk.toml  docker-compose.yml  launch_chrome.sh
.cargo/: config.toml
.sqlx/: query-04bad021033e337870f02d03407f8fa29d14439ef9a5dec0047cd1b5dfd200ff.json  query-4cbf0a6918c3644add9d8b289235b26eb1bfcd3a8b66c109747894f29f1b21e5.json  query-5452791f6ee729d5d2e694994655e29992ef90432545135e7c6f4648fd004847.json  query-5817ffc43db98c8bb439a67f37e2b4bec8d04c0a337d02c6c074e3eb13d47a13.json  query-a085db6754e4b7fa6d97404f328501c6769fe14e59bd744f9bcbef1b4bc7cd55.json  query-bca111bf0d7354e34678b81605cda681801360f32b72b977e2fd9d8105f0c3c9.json  query-c1515e2ee9b7fb7e4c20295d541a47d94b900504a45c5ae1b099bce9dd7a938d.json  query-f5d0d2969f1de086f710d17cd0df98226771d5acb951e76bcff4d0da97c0cfd0.json  query-fd753c8c5951198fb5253cdeaf89a95632d1afd94e37c9e242bfc491f2a872c0.json
backend/: Cargo.toml  Dockerfile
backend.old/migrations/: 20240216141340_rooms.up.sql  20240227182402_sessions.up.sql
backend.old/src/: config.rs  error.rs  log.rs
backend.old/src/api/: error.rs  form.rs  response_mapper.rs
backend.old/src/api/auth/: handler.rs  mod.rs  models.rs  mw_auth.rs
backend.old/src/service/: error.rs  mod.rs
backend.old/src/service/auth/: auth.rs  error.rs
backend.old/templates/layouts/: base.html  email.html
backend.old/templates/partials/: discover.html
backend.old/templates/partials/base/: nav.html  room.html  search.html
backend/certs/: localhost.dev.der  localhost.dev.key  localhost.dev.pem
backend/migrations/: 20240216134312_users.up.sql  20240216141340_rooms.down.sql
backend/src/: config.rs  log.rs  main.rs
backend/src/api/: context.rs  error.rs  mod.rs  response_mapper.rs
backend/src/api/app/: index.rs  models.rs
backend/src/api/auth/: error.rs  handler.rs  mod.rs  mw_auth.rs  signed_cookies.rs
backend/src/service/: email.rs  error.rs  mod.rs  room.rs  user.rs
backend/src/service/auth/: error.rs  mod.rs  session.rs
backend/src/web/: context.rs  error.rs  form.rs  json.rs  mod.rs  mw_auth.rs  mw_req_stamp.rs  mw_res_map.rs  routes_login.rs  routes_room.rs  signed_cookies.rs  webtransport.rs
backend/templates/email/: change-password.html
backend/templates/partials/: email_style.html  form_response.html  my_rooms.html  new_room.html
backend/templates/partials/base/: footer.html
common/: Cargo.toml  build.rs
common/src/: lib.rs  types.rs  utils.rs
common/src/protos/: aes_packet.rs  connection_packet.rs  media_packet.rs  packet_wrapper.rs  rsa_packet.rs
docker/: docker-compose.dev.yml
docs/diagrams/: architecture.py
docs/report/: main.tex  refs.bib
docs/report/protobuf/: style.sty
frontend/: .gitignore  Cargo.toml  Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/.cargo/: cargo.toml
frontend/src/: app.rs  layout.rs  main.rs  store.rs
frontend/src/components/: mod.rs  router.rs
frontend/src/components/atoms/: class.rs  device_selector.rs  footer.rs  form_title.rs  logo.rs  mod.rs  password_input.rs  spinner.rs  text_error.rs  text_input.rs  text_message.rs  text_success.rs
frontend/src/components/layouts/: simple.rs
frontend/src/components/molecules/: form.rs  header.rs  host.rs  mod.rs
frontend/src/components/organisms/: client.rs  session.rs
frontend/src/components/pages/: change_password.rs  classes.rs  create_session.rs  home.rs  login.rs  mod.rs  not_found.rs  register.rs  reset_password.rs  session.rs
frontend/src/components/pages/icons/: mod.rs
frontend/src/components/webtransport/: client.rs
frontend/styles/: output.css
protobuf/: Makefile  build-env-rust.Dockerfile
protobuf/types/: media_packet.proto
videocall-client/: Cargo.toml
videocall-client/src/: constants.rs  lib.rs
videocall-client/src/client/: video_call_client.rs
videocall-client/src/connection/: connection.rs  mod.rs  task.rs  webmedia.rs  webtransport.rs
videocall-client/src/decode/: config.rs  peer_decode_manager.rs  peer_decoder.rs  video_decoder_with_buffer.rs  video_decoder_wrapper.rs
videocall-client/src/encode/: camera_encoder.rs  microphone_encoder.rs  mod.rs  screen_encoder.rs  transform.rs
videocall-client/src/media_devices/: media_device_access.rs
