[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local libs
common = {path = "../common/"}

# axum and related stuff
axum = { version = "0.7.4", features = ["json", "macros"] }
tower-cookies = { version = "0.10.0", features = ["signed"] }

# webtransport stuff
anyhow = "1.0.60"
quinn = { version = "0.10.1", features = ["runtime-tokio", "tls-rustls", "ring"] }
rustls = { version = "0.21.2", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.3"
rustls-pemfile = "1.0.3"
sec-http3 = "0.1.2"
bytes = "1.4.0"
futures = "0.3.26"
protobuf = "3.3.0"
regex = "1.9.5"
async-nats = "0.31.0"
urlencoding = "2.1.3"
http = "0.2.9"

# database stuff
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "time", "uuid"] }

# tokio
tokio = { version = "1.36.0", features = ["full"] }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Json serialization
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"

# encryption stuff
argon2 = { version = "0.5.3", features = ["password-hash", "rand"] }
rand_chacha = "0.3.1"
rand_core = "0.6.4"

# misc
base64 = "0.21.7"
askama = "0.12.1"
lettre = { version = "0.11.4", features = ["tokio1", "tokio1-native-tls"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
thiserror = "1.0.57"
time = { version = "0.3.34",  features = ["formatting", "parsing", "serde"]}
strum_macros = "0.26.1"
validator = "0.16.1"
