[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
time = { version = "0.3.34",  features = ["formatting", "parsing", "serde"]}
protobuf = "3.3.0"

[build-dependencies]
protobuf-codegen = "3.3.0"
protobuf = "3.3.0"
