[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local libs
common = {path = "../common/"}

# yew stuff
yew = {version = "0.21", features = ["csr"]}
yew-hooks = "0.3.1"
yew-router = "0.18.0"
yewdux = "0.10"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
gloo-net = "0.2"

# misc
validator = "0.16.1"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.114"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "HtmlDocument",
    "console",
    "Navigator",
    "HtmlInputElement"
]
