[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local libs
common = {path = "../common/"}

aes = "0.8.3"
anyhow = "1"
cbc = { version = "0.1.2", features = ["alloc"] }
chrono = "0.4.19"
getrandom = { version = "0.2.10", features = ["js"] }
protobuf = "3.3.0"

# gloo
gloo = "0.8.0"
gloo-net = "0.2"
gloo-timers = "0.2.6"
gloo-utils = "0.1"
gloo-console = "0.2.3"

js-sys = "0.3"
log = "0.4.19"
rand = { version = "0.8.5", features = ["std_rng", "small_rng"] }
rsa = "0.9.2"

# yew stuff
yew = {version = "0.21", features = ["csr"]}
yew-hooks = "0.3.1"
yew-router = "0.18.0"
yewdux = "0.10"
yew-webtransport = "0.21.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"

# misc
validator = "0.16.1"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.114"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "AudioTrack",
    "AudioData",
    "AudioEncoder",
    "AudioEncoderInit",
    "AudioEncoderConfig",
    "AudioDecoder",
    "AudioDecoderInit",
    "AudioDecoderConfig",
    "AudioContext",
    "BaseAudioContext",
    "GainOptions",
    "GainNode",
    "console",
    "CodecState",
    "CanvasRenderingContext2d",
    "EncodedAudioChunk",
    "EncodedAudioChunkInit",
    "EncodedAudioChunkType",
    "EncodedVideoChunk",
    "EncodedVideoChunkInit",
    "EncodedVideoChunkType",
    "MediaStreamAudioDestinationNode",
    "AudioDestinationNode",
    "AudioContextOptions",
    "AudioDataCopyToOptions",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamTrack",
    "MediaTrackSettings",
    "MediaStreamTrackProcessor",
    "MediaStreamTrackProcessorInit",
    "MediaStreamTrackGenerator",
    "MediaStreamTrackGeneratorInit",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "MediaStreamAudioSourceNode",
    "HtmlVideoElement",
    "MediaStreamConstraints",
    "ReadableStream",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamDefaultReader",
    "VideoEncoder",
    "VideoEncoderInit",
    "VideoEncoderConfig",
    "VideoEncoderEncodeOptions",
    "VideoFrame",
    "VideoTrack",
    "VideoDecoder",
    "VideoDecoderConfig",
    "VideoDecoderInit",
    "LatencyMode",
    "HtmlAudioElement",
    "AudioDataInit",
    "AudioSampleFormat",
    "TransformStream",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaTrackConstraints",
    "CanvasRenderingContext2d"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.20"
